manifests/01-rhacs-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhacs-operator
