manifests/02-central.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stackrox
